# TP_Project

./: CHANGELOG.md  CMakeLists.txt  DESCRIPTION.md  README.md  feature.md  keygen.sh
doxygen/: _c_make_lists_8txt.html  abstract__handler_8cpp.html  abstract__handler_8cpp__incl.map  abstract__handler_8cpp__incl.md5  abstract__handler_8hpp.html  abstract__handler_8hpp__dep__incl.map  abstract__handler_8hpp__dep__incl.md5  abstract__handler_8hpp__incl.map  abstract__handler_8hpp__incl.md5  abstract__handler_8hpp_source.html  account_8cpp.html  account_8cpp__incl.map  account_8cpp__incl.md5  account_8hpp.html  account_8hpp__dep__incl.map  account_8hpp__dep__incl.md5  account_8hpp__incl.map  account_8hpp__incl.md5  account_8hpp_source.html  accounts__database_8cpp.html  accounts__database_8cpp__incl.map  accounts__database_8cpp__incl.md5  accounts__database_8hpp.html  accounts__database_8hpp__dep__incl.map  accounts__database_8hpp__dep__incl.md5  accounts__database_8hpp__incl.map  accounts__database_8hpp__incl.md5  accounts__database_8hpp_source.html  all__messages_8hpp.html  all__messages_8hpp__dep__incl.map  all__messages_8hpp__dep__incl.md5  all__messages_8hpp__incl.map  all__messages_8hpp__incl.md5  all__messages_8hpp_source.html  annotated.html  authorization__request_8cpp.html  authorization__request_8cpp__incl.map  authorization__request_8cpp__incl.md5  authorization__request_8hpp.html  authorization__request_8hpp__dep__incl.map  (+701 more)
includes/: Account.h  Clients.h  Permissions.h  Requests.h  Room.h  Server.h  Socket.h
src/: Account.cpp  Clients.cpp  Permissions.cpp  Requests.cpp  Room.cpp  Server.cpp  Socket.cpp
src/client_side/: console_handler.cpp  console_handler.hpp  console_renderer.cpp  console_renderer.hpp  log.cpp  log.hpp  main.cpp
src/general/: CMakeLists.txt  account.cpp  account.hpp  accounts_database.cpp  accounts_database.hpp  permissions.cpp  permissions.hpp  room.cpp  room.hpp  socket.cpp  socket.hpp
src/general/client_handlers/: abstract_handler.cpp  abstract_handler.hpp  client_handler.cpp  client_handler.hpp  server_handler.cpp  server_handler.hpp
src/general/request_handlers/: abstract_handler.cpp  abstract_handler.hpp  client_handler.cpp  client_handler.hpp  renderer.hpp  server_handler.cpp  server_handler.hpp
src/general/requests/: message.hpp  request.hpp  request_creator.cpp  request_creator.hpp  request_creators.cpp  request_creators.hpp  request_parser.cpp  request_parser.hpp
src/general/requests/authorization/: authorization_request.cpp  authorization_request.hpp  sign_in_request.cpp  sign_in_request.hpp  sign_up_request.cpp  sign_up_request.hpp
src/general/requests/messages/: all_messages.hpp  base_message.cpp  base_message.hpp  message.hpp  messages_builder.cpp  messages_builder.hpp  messages_facade.cpp  messages_facade.hpp  private_decorator.cpp  private_decorator.hpp  properties_decorator.cpp  properties_decorator.hpp  room_decorator.cpp  room_decorator.hpp  sender_decorator.cpp  sender_decorator.hpp  (+4 more)
src/general/socket/: CMakeLists.txt  log.cpp  log.hpp  socket.cpp  socket.hpp
src/server_side/: client_connection.cpp  client_connection.hpp  console_handler.cpp  console_handler.hpp  log.cpp  log.hpp  main.cpp  room.cpp  room.hpp  server.cpp  server.hpp  server_permissions.cpp  server_permissions.hpp
src/server_side/database/: accounts_database.hpp  simple_database.cpp  simple_database.hpp
src/socket/: CMakeLists.txt  socket.hpp
testing/atomic/: CMakeLists.txt  common.cpp
testing/database/: CMakeLists.txt  common.cpp
testing/socket/: CMakeLists.txt  simple_client.cpp  simple_server.cpp
